# arbitrarium

./: .gitignore  README.md  arbitrarium.py  docker-compose.override.yml  docker-compose.yml  main.py  requirements.txt
backend/: .dockerignore  Dockerfile  docker.dev.env  docker_entrypoint.sh  pyproject.toml  pytest.ini  test_settings.py
backend/arb/: __init__.py  element.py  entity.py  export.py  framenet.py  nltk_wrapper.py  util.py
backend/arb/frames/: __init__.py  frame.py  suasion.py
backend/arb/interfaces/: __init__.py  framenet_service.py  wordnet_service.py
backend/arb/nltk_impl/: __init__.py  framenet_wrapper.py  wordnet_wrapper.py
backend/coreapp/: admin.py  apps.py  backends.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/coreapp/migrations/: 0001_initial.py  0002_alter_element_frame_alter_entity_env_and_more.py  0002_remove_frame_coreapp_fra_entity__8479e6_idx_and_more.py  0003_entity_name.py  0003_frame_parent_frame.py  0004_add_frame_and_element_fields.py  0004_alter_frame_options_remove_frame_name.py  0005_alter_element_fnid.py  0005_convert_element_value.py  0006_convert_element_value_field.py  0006_entity_primary_frame.py
backend/coreapp/services/: __init__.py  frame_application.py  frame_applicator.py  frame_suggestion.py  frame_suggestor.py  lexical_services.py
backend/coreapp/tests/: conftest.py  test_frame_application.py  test_frame_applicator.py  test_frame_suggestion.py  test_frame_suggestion_real_data.py  test_frame_views.py  test_models.py  test_serializers.py  (+2 more)
backend/mysite/: settings.py  urls.py
(+105 files in other folders)
